3d_recontruction_analysis_self_and_coop_task/slurm-6185006.out
The following modules were not unloaded:
  (Use "module --force purge" to unload all):

  1) StdEnv
  File "DBN_and_bhv_Aniposelib3d_ana_combinesessions_morevars_task.py", line 673
    ¶
    ^
SyntaxError: invalid character in identifier
